Fix the loop posting the same issues every second minute